<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WPM</string>
    <string name="main_title">WPM Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="test_button">Test</string>
    <string name="log_button">Log</string>
    <string name="about_button">About</string>
    <string name="title_activity_test_screen">TestScreen</string>
    <string name="user_input_passage"></string>
    <string name="begin_hint">Type!</string>
    <string name="test">test</string>
    <string name="system_passage">"Hello Wonderful World And All of It's Inhabitants!"</string>
    <string name="title_activity_about_page">AboutPage</string>
    <string name="title_activity_about_screen">AboutScreen</string>
    <string name="about">Android App by Matthew Du and Calvin Nhieu.</string>
    <string name="date">SE Hack Day. Saturday, January 11th, 2014.</string>
    

</resources>
