<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <TextView android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:textSize="35sp"
        android:text="@string/main_title"
        android:layout_gravity="center"
        android:gravity="center"/>
    
    <Button android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_button"
        android:onClick="startTest"/>
    
    <Button android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_button"/>
    
    <Button android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_button"
        android:onClick="startAbout"/>
    
</LinearLayout>
