<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TestScreen" >
	
    <TextView android:id="@+id/system_passage"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/system_passage"/>
    
    <TextView android:id="@+id/user_input_passage"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/user_input_passage"
        /> 
        
    <EditText android:id="@+id/user_input_word"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/begin_hint"
        /> 
    
</LinearLayout>
